# MLOps_exercises

./: .gitignore  LICENSE  README.md  data.dvc  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
models/: model.pth
src/mlops/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_data.py
